--- a/app/src/main/res/layout/page.xml
+++ b/app/src/main/res/layout/page.xml
@@ -1,32 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/dark_orange">
-
-    <include layout="@layout/titlebar_layout"/>
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:gravity="center"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/dark_orange">
 
-        <TextView
-            android:layout_margin="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/content"
+        <include layout="@layout/titlebar_layout"/>
+
+        <LinearLayout
+            android:id="@+id/content_ll"
             android:gravity="center"
-            android:textSize="25sp"
-            android:textColor="#ffffff"/>
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <include layout="@layout/content_item"/>
-        <include layout="@layout/content_item"/>
-        <include layout="@layout/content_item"/>
-        <include layout="@layout/content_item"/>
+            <ViewStub
+                android:layout="@layout/stub_view"
+                android:id="@+id/view_stub"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_margin="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/content"
+                android:gravity="center"
+                android:textSize="25sp"
+                android:textColor="#ffffff"/>
+
+            <include layout="@layout/content_item"/>
+            <include layout="@layout/content_item"/>
+            <include layout="@layout/content_item"/>
+            <include layout="@layout/content_item"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:visibility="gone"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+</FrameLayout>
