--- a/app/src/main/res/layout/page.xml
+++ b/app/src/main/res/layout/page.xml
@@ -3,6 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
+
+<!--        <FrameLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
+<!--            -->
+<!--            -->
+<!--        </FrameLayout>-->
+<!--        -->
+<!--    </ScrollView>-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
