add scroll view

--- a/app/src/main/res/layout/content_item.xml
+++ b/app/src/main/res/layout/content_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:layout_margin="10dp"
@@ -9,14 +9,16 @@
     >
 
     <TextView
+        android:id="@+id/include_tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="this is test 1" />
 
     <TextView
+        android:id="@+id/include_tv2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="this is test 2" />
 
-</LinearLayout>
+</merge>
 
