--- a/app/src/main/res/layout/page.xml
+++ b/app/src/main/res/layout/page.xml
@@ -38,6 +38,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:id="@+id/content_tv"
                 android:layout_margin="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -46,10 +47,12 @@
                 android:textSize="25sp"
                 android:textColor="#ffffff"/>
 
-            <include layout="@layout/content_item"/>
-            <include layout="@layout/content_item"/>
-            <include layout="@layout/content_item"/>
-            <include layout="@layout/content_item"/>
+<!--            <include-->
+<!--                layout="@layout/content_item"/>-->
+<!--            <include-->
+<!--                layout="@layout/content_item"/>-->
+<!--            <include layout="@layout/content_item"/>-->
+<!--            <include layout="@layout/content_item"/>-->
 
         </LinearLayout>
 
