--- a/app/src/main/res/layout/motion_test.xml
+++ b/app/src/main/res/layout/motion_test.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layoutDescription="@xml/scene_01"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:layoutDescription="@xml/scene_01">
 
     <View
         android:id="@+id/button"
@@ -11,5 +11,19 @@
         android:layout_height="64dp"
         android:background="@color/colorAccent"
         android:text="Button" />
+
+    <TextView
+        android:clickable="true"
+        android:focusable="true"
+        android:text="Selector Animator"
+        android:textSize="30sp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:stateListAnimator="@animator/selector_animator" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
